add styles to main page

--- a/public/style.css
+++ b/public/style.css
@@ -20,35 +20,58 @@ header {
     align-items: center;
     padding: 0 100px;
     justify-content: space-between;
+    
 }
 
 .productContainer {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
 }
 
 .productItem {
-    padding: 20px;
-    border: 0.5px solid #999;
+    width: 180px;
+    height: 270px;
+    /* padding: 20px; */
+    border: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: space-between;
     border-radius: 10px;
+}
+.itemImg{
+    width: 100%;
+    height: 100%;
+}
+.imgBlock{
+    width: 100%;
+    height: 50%;
+    /* background-color: rgba(0, 217, 255, 0.836); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px ;
 }
 
 .cartPopup {
     width: 300px;
     height: 300px;
+    background-color: #fff;
     position: fixed;
-    bottom: 50px;
+    top: 50px;
     right: 50px;
     border: 0.5px solid #999;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     border-radius: 10px;
+    display: none;
+    z-index: 3;
 }
 .notificationPopup{
     width: 400px;
@@ -67,4 +90,237 @@ header {
     font-weight: 700;
     display: none;
    
+}
+.buttons{
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.menuBtn{
+    width: 80px;
+    height: 35px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 15px;
+    background-color: #E7E9EB;
+    border: none;
+    font-weight: 500;
+    color: #11293B;
+    padding: 10px;
+    
+}
+.searchBtn{
+    width: 140px;
+    height: 35px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 15px;
+    background-color: #E7E9EB;
+    border: none;
+    font-weight: 500;
+    color: #11293B;
+    padding: 10px;
+}
+.buttonsImg{
+    width: 13px;
+    margin-right: 10px;
+}
+.logo{
+    width: 60px;
+}
+nav{
+    width: 150px;
+    height: 17px;
+    display: flex;
+    justify-content: space-around;
+}
+.cartGroup{
+    display: flex;
+}
+.cartCounter{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #F67280;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.selctGroup{
+    width: 200px;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.select{
+    width: 70px;
+    height: 25px;
+    background-color: #E7E9EB;
+    color: #11293B;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+}
+.sliderArea{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cardArea{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.sliderContainer{
+    width: 70%;
+    height: 100%;
+    background-color: #FFE2B5;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+}
+.left{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding-left: 50px;
+    padding-bottom: 70px;
+}
+.right{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: red; */
+}
+.right p{
+    z-index: 1;
+    font-weight: 900;
+    font-size: 158px;
+    color: #F5CF94;
+
+}
+.right img{
+    width: 343px;
+    z-index: 2;
+    position: absolute;
+}
+.sliderTitle{
+    font-size: 46px;
+}
+.sliderTitle2{
+    font-size: 46px;
+    font-weight: 700;
+}
+.discoverBtn{
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 20px;
+    background-color: #000;
+    color: #D0AD37;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 20px;
+    box-shadow: 5px 5px 15px #333;
+}
+.sliderBtn{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 5px 5px 15px #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+.priceBlock{
+    width: 100%;
+    display: flex;
+    
+}
+.newPrice{
+    color: #FD4E61;
+    margin-right: 10px;
+}
+.oldPrice{
+    text-decoration: line-through;
+}
+.colorsBlock{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.colorsBtn{
+    width: 50px;
+    height: 20px;
+    color: #458EF6;
+    background-color: #458ff66e;
+    border-radius: 20px;
+    font-size: 14px;
+    text-align: center;
+}
+.colors{
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.colorItem{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+#black{
+    width: 17px;
+    height: 17px;
+    background-color: #000;
+    border: 3px double #fff;
+}
+#red{
+    background-color: red;
+}
+#orange{
+    background-color: orange;
+}
+#yellow{
+    background-color: yellow;
+}
+#green{
+    background-color: green;
+}
+.addItem{
+    width: 90%;
+    height: 40px;
+    border: none;
+    border-radius: 15px;
+    background-color: #E7E9EB;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 16px;
 }
