--- a/public/admin/style.css
+++ b/public/admin/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: montserrat;
     
 }
 .wrap{
@@ -19,10 +20,16 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    background-color: #333;
+    background-color: #444;
     color: #fff;
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
     align-items: center;
+}
+.orderItemInner{
+    width: 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
